--- a/src/components/SobreNosotros/SobreNosotros.css
+++ b/src/components/SobreNosotros/SobreNosotros.css
@@ -13,6 +13,10 @@
   color: #444;
 }
 
+.titulo-principal span {
+  color: var(--color-primary);
+}
+
 .personas {
   display: flex;
   justify-content: center;
